force-app/main/default/objects/Cross_Cultural_Activity__c/fields/Photo1__c.field-meta.xml
<CustomField>
    <fullName>Photo1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Photo</label>
    <type>Checkbox</type>
</CustomField>