force-app/main/default/objects/Cross_Cultural_Activity__c/fields/Photo2__c.field-meta.xml
<CustomField>
    <fullName>Photo2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Photo 2</label>
    <type>Checkbox</type>
</CustomField>