force-app/main/default/objects/Cross_Cultural_Activity__c/fields/Photo3__c.field-meta.xml
<CustomField>
    <fullName>Photo3__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Photo 3</label>
    <type>Checkbox</type>
</CustomField>