force-app/main/default/objects/Cross_Cultural_Activity__c/fields/SupportingDocuments__c.field-meta.xml
<CustomField>
    <fullName>SupportingDocuments__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Supporting Documents/Visuals</label>
    <type>Checkbox</type>
</CustomField>